--- a/public/index.html
+++ b/public/index.html
@@ -770,7 +770,123 @@
         }
 
         async function transcribeRecording(id) {
-            if (!confirm('Начать транскрипцию записи? Это может занять несколько минут.')) {
+            // Проверяем поддержку браузерной транскрипции
+            if (!('webkitSpeechRecognition' in window) && !('SpeechRecognition' in window)) {
+                if (!confirm('Ваш браузер не поддерживает браузерную транскрипцию.\n\nПопробовать серверную транскрипцию? (Может быть недоступна из-за исчерпания квоты OpenAI)')) {
+                    return;
+                }
+                // Fallback на серверную транскрипцию
+                return transcribeRecordingServer(id);
+            }
+
+            if (!confirm('Начать транскрипцию записи?\n\n🎙️ Будет использована браузерная транскрипция.\nУбедитесь что звук включен на устройстве.')) {
+                return;
+            }
+
+            try {
+                const button = event.target;
+                button.disabled = true;
+                button.textContent = 'Подготовка...';
+
+                // Получаем аудио файл
+                const audioResponse = await fetch(`/api/recordings/${id}/audio`, {
+                    headers: {
+                        'Authorization': `Bearer ${authToken}`
+                    }
+                });
+
+                if (!audioResponse.ok) {
+                    throw new Error('Не удалось загрузить аудио файл');
+                }
+
+                const audioBlob = await audioResponse.blob();
+                const audioUrl = URL.createObjectURL(audioBlob);
+
+                // Создаем аудио элемент
+                const audio = new Audio(audioUrl);
+                audio.volume = 1.0;
+
+                button.textContent = 'Воспроизведение...';
+
+                // Настраиваем распознавание речи
+                const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+                const recognition = new SpeechRecognition();
+                
+                recognition.continuous = true;
+                recognition.interimResults = false;
+                recognition.lang = 'ru-RU';
+                recognition.maxAlternatives = 1;
+
+                let finalTranscription = '';
+
+                recognition.onresult = function(event) {
+                    for (let i = event.resultIndex; i < event.results.length; i++) {
+                        if (event.results[i].isFinal) {
+                            finalTranscription += event.results[i][0].transcript + ' ';
+                        }
+                    }
+                };
+
+                recognition.onerror = function(event) {
+                    console.error('Ошибка распознавания:', event.error);
+                };
+
+                recognition.onend = async function() {
+                    // Сохраняем транскрипцию на сервер
+                    try {
+                        button.textContent = 'Сохранение...';
+
+                        const response = await fetch(`/api/recordings/${id}/transcribe-text`, {
+                            method: 'POST',
+                            headers: {
+                                'Authorization': `Bearer ${authToken}`,
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({
+                                transcription: finalTranscription.trim()
+                            })
+                        });
+
+                        const data = await response.json();
+
+                        if (data.success) {
+                            alert('Браузерная транскрипция завершена успешно!\n\nРезультат: ' + finalTranscription.trim());
+                            loadRecordings();
+                            loadStats();
+                        } else {
+                            alert('Ошибка сохранения транскрипции: ' + data.message);
+                        }
+                    } catch (saveError) {
+                        alert('Ошибка сохранения транскрипции: ' + saveError.message);
+                    } finally {
+                        button.disabled = false;
+                        button.textContent = 'Транскрибировать';
+                        URL.revokeObjectURL(audioUrl);
+                    }
+                };
+
+                // Запускаем воспроизведение и распознавание
+                recognition.start();
+                audio.play();
+
+                // Останавливаем распознавание когда аудио закончится
+                audio.onended = function() {
+                    setTimeout(() => {
+                        recognition.stop();
+                    }, 2000); // Даем 2 секунды на завершение распознавания
+                };
+
+            } catch (error) {
+                alert('Ошибка браузерной транскрипции: ' + error.message);
+                console.error('Ошибка транскрипции:', error);
+                button.disabled = false;
+                button.textContent = 'Транскрибировать';
+            }
+        }
+
+        // Серверная транскрипция (fallback)
+        async function transcribeRecordingServer(id) {
+            if (!confirm('Начать серверную транскрипцию записи? Это может занять несколько минут.')) {
                 return;
             }
 
@@ -793,7 +909,12 @@
                     loadRecordings();
                     loadStats();
                 } else {
-                    alert('Ошибка транскрипции: ' + data.message);
+                    // Показываем детальную ошибку пользователю
+                    let errorMessage = data.message || 'Неизвестная ошибка';
+                    if (data.technical_error) {
+                        errorMessage += '\n\nТехническая информация: ' + data.technical_error;
+                    }
+                    alert('Ошибка серверной транскрипции:\n\n' + errorMessage);
                 }
             } catch (error) {
                 alert('Ошибка подключения к серверу');
